<resources>
    <string name="app_name">Smack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_image">Profile Image Pic</string>
    <string name="login">Login</string>
    <string name="enter_message_hint">message:</string>
    <string name="please_log_in">Please Log In</string>
    <string name="send_message_image">send message image</string>
    <string name="password">password</string>
    <string name="email_text">email</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign Up Here</string>
</resources>
